# FlowChat

./: .gitignore  README.md  build.sh
client/: go.mod  pom.xml
client/cmd/: main.go
client/src/main/java/org/flowchat/: Main.java
server/: CMakeLists.txt  README.md
server/src/: main.cpp
server/src/server/: server.cpp  server.hpp
server/src/session/: session.cpp  session.hpp
server/src/tcp/: server.cpp  server.hpp  tcp_server.cpp  tcp_server.hpp
